@@ -701,6 +701,36 @@ ULong vector_evaluate64_helper( ULong srcA, ULong srcB, ULong srcC,
 #undef MAX_IMM_BITS
 }
 
+/*---------------------------------------------------------------*/
+/* --- Clean helper for vbpermq instruction                   ---*/
+/*---------------------------------------------------------------*/
+ULong vbpermq_clean_helper( ULong vA_high, ULong vA_low,
+                            ULong vB_high, ULong vB_low) {
+   ULong bit, result = 0x0;
+   UInt i, index;
+
+   /* IBM numbering bit 0 on is MSB, bit 63 is LSB */
+   for ( i = 0; i < 16; i++) {
+      if (i < 8)
+         index = 0xFFULL & (vB_high >> (56 - 8*i) );
+      else
+         index = 0xFFULL & (vB_low  >> (56 - 8*(i-8)));
+
+      if (index < 64) {
+         bit = 0x1 & (vA_high >> (63 - index));
+
+      } else if (index < 128) {
+         bit = 0x1 & (vA_low >> (127 - index));
+
+      } else
+         bit = 0;
+
+      result |= bit << (15 - i);
+   }
+   return result;
+}
+
+
 /*--------------------------------------------------*/
 /*---- VSX Vector Generate PCV from Mask helpers ---*/
 /*--------------------------------------------------*/
